src/App.css
body {
    overflow-y: hidden;
}

.logoutBtn {
    width: max-content;
    background: indianred;
    border: 1px solid indianred;
}

.logoutBtn:hover {
    border: darkred;
    background: darkred;
}

.stickyDiv {
    box-sizing: border-box;
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: sticky;
    background: var(--pico-card-background-color);
    box-shadow: var(--pico-card-box-shadow);
    height: 20vh;
    padding: 30px;
    top: 0;
}


.header {
    box-sizing: border-box;
    top: 20vh;
    height: 15vh;
    display: flex;
    gap: 20px;
}

@media screen and (max-width: 768px) {
    .header {
        flex-direction: row;
        gap: 10px;
    }
    hgroup>* {
        font-size: 0.9rem !important;
    }

}

.header > img {
    object-fit: contain;
}

@media screen and (max-width: 768px) {
    .header > img {
        height: 60px;
    }

    .form-btn-group {
        flex-direction: column;
    }

    .form-btn-group> button {
    /*    wrap text*/
        white-space: normal;
    }
}

.footer {
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    bottom: 0;
    width: 100%;
    text-align: center;
}

.login-form {
    width: 50vw;
}

#submitFormBtn {
    border: 1px solid mediumseagreen;
    background: mediumseagreen;
}

#submitFormBtn:hover {
    background: seagreen;
}

.formContainer {
    box-sizing: border-box;
    top: 35vh;
    height: 65vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
}


.navBar {
    display: flex;
    height: 10vh;
    justify-content: space-around;
    background: var(--pico-card-background-color);
    box-shadow: var(--pico-card-box-shadow);
    align-items: center;
    text-align: center;

}

.username {
    font-size: 1.5rem;
    font-weight: bold;
    color: var(--color);
}

#outputContainer {
    box-sizing: border-box;

    /*top: 35vh;*/
    /*height: 65vh;*/
    display: block;
    width: 100%;

}

.xSmall {
    font-size: 1px;
}

.creditText {
    color: goldenrod;
    cursor: pointer;
}

.tabWindow {
    width: 100%;
    border: 1px solid lightgray;
}

.tabNavigationBar {
    display: flex;
    width: 100%;
}

.tablink {
    flex: 1;
    text-align: center;
    cursor: pointer;
    padding: 10px;
    border: 1px solid lightgray;
    background: rgba(0, 0, 0, 0.1);
}

.tablink:hover {
    background: rgba(0, 0, 0, 0.4);
}

.tablinkActive {
    border: 3px solid seagreen;
    background: rgba(0, 0, 0, 0.4);
}

select {
    cursor: pointer;
}

#chart {
    color: var(--color);
}


#resetFormBtn {
    border: 1px solid indianred;
    background: indianred;
}

#resetFormBtn:hover {
    background: darkred;
}

.scroll-section {
    overflow-y: auto;
    width: 100%;
    height: 100vh;
}

.required-asterisk {
    color: indianred;
}

/*style the scrollbar*/

/* width */
::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0.1);
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.3);
}

text {
    color: white !important;
    fill: white !important;

}

.apexcharts-legend-text {
    color: white !important;
}

.creditText:hover {
    color: gold;
}

[data-tooltip] {
    border: none !important;
}

